2007-07-18 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSPrintInfo.h,
	* Source/NSPrintInfo.m (-imageablePageBounds,
	-localizedPaperName): New MacOSX method. Plus some general clean up.
	* Source/NSPrinter.m (-stringListForKey:inTable:,
	-isKey:inTable:): Don't raise exception on missing table.
	* Source/NSPrinter.m (-statusForTable:) Add check for corrct class.
	
2007-07-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m (-rectInMatrixSpace:, -translateToPoint:, 
	-makeIdentityMatrix): Use optimized primitive methods from base.
	* Source/NSAffineTransform.m (-scaleTo::): Try to handle rotation
	case better.  
	* Source/NSView.m (-scaleUnitSquareToSize:): Adjust origin too and
	handle rotation case.
	* Source/NSView.m (-setBounds:, setBoundsOrigin:): Try to handle
	rotation case better.

2007-07-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-encodeWithCoder:): Try to better key encode
	the contents of the cell.

2007-07-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (NSView-_displayPageInRect:withInfo:),
	* Source/NSView.m (-_rebuildCoordinates, -initWithFrame:,
	-initWithCoder:, -dealloc, -_updateBoundsMatrix, -setBounds:,
	-setBoundsOrigin:, -setBoundsRotation:, -boundsRotation,
	-_lockFocusInContext:inRect:):
	Create _boundsMatrix only when needed and protect all uses of it.
	* Source/NSView.m (-initWithCoder:): Remove call to
	setFrameOrigin: on frame matrix.
	
2007-07-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextField.m (-isFlipped): Report the text field as
	being flipped.

2007-06-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSecureTextFieldCell (-drawInteriorWithFrame:): Add
	some support for bullet echoing and a comment on the missing bits.

2007-06-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_lockFocusInContext:inRect:): Ignore the frame
	origin when computing the clip area.

2007-06-27 Fred Kiefer <FredKiefer@gmx.de>
